Fixed box shadow on iOS

--- a/src/styles/components/Inputs.scss
+++ b/src/styles/components/Inputs.scss
@@ -68,6 +68,8 @@
 	font-size: 1.25rem !important;
 	font-weight: 700;
 
+	// Not ideal, but iOS was removing the box-shadow otherwise
+	-webkit-appearance: none;
 	-webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14),
 											0 3px 1px -2px rgba(0, 0, 0, .12),
 											0 1px 5px 0 rgba(0, 0, 0, .20) !important;
